tests/negative/test_cn_asgn_cn_data_member.orb
data Foo {
    let x:i32
};

fnc makeFoo() Foo {
    let f:Foo;
    ret f;
};

fnc main() () {
    let f:(Foo cn) (makeFoo);
    = (. f x) 1;
};